[package]
name = "ash-tutorial"
version = "0.1.0"
authors = ["enetto <eneatto@gmail.com>"]
edition = "2018"

[dependencies]
winit     = "0.20.0"
ash       = "0.29.0"
num       = "0.2"
cgmath    = "0.17.0"
image     = "0.22"
memoffset = "0.5.1"
tobj      = "0.1.10"


[[bin]]
name = "01"
path = "src/tutorial/01_instance_creation.rs"
[[bin]]
name = "02"
path = "src/tutorial/02_validation_layers.rs"
[[bin]]
name = "03"
path = "src/tutorial/03_physical_device_selection.rs"
[[bin]]
name = "04"
path = "src/tutorial/04_logical_device.rs"
